--- a/src/status.html
+++ b/src/status.html
@@ -4,82 +4,112 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Continuous deployment agent</title>
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;1,700&display=swap" rel="stylesheet"> 
 <style>
 
 .container {
-    max-width: 700px;
+    max-width: 750px;
     margin: 0px auto;
-    font-family: 'Roboto', sans-serif;
+    font-family: sans-serif;
 }
 
 h1, h2, h3, h4 {
     font-weight: 700;
 }
 
-.indent {
-    margin-left: 10px;
-}
-.marker {
-  margin: -4px 5px 0px 0px;
-  font-size: 1.8em;
+.greenText {
+    color: seagreen;
 }
 
 .green {
-    color: green;
+    color: seagreen;
+  background: seagreen;
 }
 
+.redText {
+    color: indianred;
+}
 .red {
-    color: red;
+    color: indianred;
+    background-color: indianred;
+}
+.orange {
+  background-color: sandybrown;
 }
 
-.redeployment {
-  margin: 5px;
+.project {
+  border-left: 5px solid lightskyblue;
+  padding-left: 10px;
 }
-
-.redeployment > details {
-  padding: 0px;
-  margin: 0px 0px 0px 0px;
-  border: 1px solid lightgray;
+.project > p {
+  padding: 0px 0px 0px 10px;
 }
-
-.redeployment > details > summary {
+.projectWidget {
+  border: 1px solid #bbb;
+  border-radius: 10px;
+  margin-bottom: 10px;
+  background-color: #efefef;
+}
+.projectWidget > summary {
+  padding: 15px 10px;
+  font-size: 0.9em;
   cursor: pointer;
-  display: flex;
-  align-items: center;
-  padding: 5px;
-  background: #eee;
+}
+.projectWidget > div {
+  background-color: white;
+  border-radius: 0px 0px 10px 10px;
 }
 
-.redeployment .detailsContent {
+.deployment {
+  border-top: 1px solid #bbb;
   padding: 10px;
 }
-
-.step {
-  margin: 0px 5px 1px 0px;
-}
-
-.step > details {
-  padding: 0px;
-  margin: 0px 0px 0px 4px;
-}
-
-.step > details > summary {
-  cursor: pointer;
+.deployment > .header {
   display: flex;
   align-items: center;
-  padding: 5px;
-  background: #eee;
-  margin: 2px 0px 1px 0px;
 }
-
-pre {
-  border: 1px solid lightgray;
-  border-radius: 5px;
+.deployment > .header > .circle {
+  width: 20px;
+  height: 20px;
+  border-radius: 10px;
+  font-size: 2.5em;
+  margin: 0px 10px 0px 0px;
+}
+.deployment > .header > .title {
+  margin: 5px 0px;
+  font-weight: bold;
+}
+.deployment > .body {
+  margin: 0;
+  margin-left: 30px;
+  font-size: 0.9em;
+}
+.deployment > .body p {
+  padding: 0;
+  margin: 5px 0px;
+  color: #444;
+}
+.deployment > .body > details {
+  margin: 5px 0px;
+  padding: 5px;
+}
+.deployment summary {
+  color: #444;
+  cursor: pointer;
+}
+.deployment .logs {
+  background-color: black;
+  color: white;
+  border-radius: 10px;
+  margin-top: 15px;
+  padding: 5px;
+}
+.deployment .logs > div {
   padding: 10px;
-  background-color: #eee;
+}
+.deployment .logs > pre {
+  overflow-y: auto;
+  margin: 0px;
+  padding: 5px 10px;
 }
 </style>
 </head>
@@ -87,10 +117,7 @@ pre {
 <div class="container">
 <h1>Continuous deployment agent</h1>
 
-<p>Build #TODO | <a href="https://github.com/jamespfennell/cdagent">Agent GitHub repo</a></p>
-
 <h2>Projects</h2>
-<div class="indent">
 
 <ul>
 {{ #each projects }}
@@ -99,76 +126,117 @@ pre {
 </ul>
 
 {{ #each projects }}
-
 <a name="projects-{{config.name}}"></a>
-<h3>{{config.name}}</h3>
-<div class="indent">
+<div class="project">
+  <h3>{{config.name}}</h3>
+  <p>
+    <a href="https://github.com/{{ config.github_user }}/{{ config.repo}}">
+      github.com/{{ config.github_user }}/{{ config.repo}}
+    </a>
+  </p>
+  <p>
+    Last deployed X hours ago. 
+  </p>
 
-<a href="https://github.com/{{ config.github_user }}/{{ config.repo}}">github.com/{{ config.github_user }}/{{ config.repo}}</a>
-
-{{#if pending_workflow_run }}
-
-<h4>Pending: {{ pending_workflow_run.display_title }}</h4>
-
-{{/if}}
-
-<h4>Most recent redeployments</h4>
-
-{{ #each run_results }}
-
-<div class="redeployment">
-    <details>
-        <summary>
-            <div class="marker {{ #if success }}green{{ else }}red{{ /if }}">●</div>
-            <div class="title">{{ workflow_run.display_title }} ({{ workflow_run.updated_at }})</div>
-        </summary>
-        <div class="detailsContent">
-            <p>
-                <a href="{{ workflow_run.html_url }}">View CI run on GitHub</a>
-            </p>
-            <h5>Timeline</h5>
-            <table>
-              <tr>
-                <td>GitHub workflow started</td><td>{{ workflow_run.created_at }}</td>
-                </tr>
-                <tr>
-                <td>GitHub workflow finished</td><td>{{ workflow_run.updated_at }}</td>
-                </tr>
-                <tr>
-                <td>CD Agent run started</td><td>{{ started }}</td>
-                </tr>
-                <tr>
-                <td>CD Agent run finished</td><td>{{ finished }}</td>
-              </tr>
-            </table>
-            <h5>Redeployment steps</h5>
-            {{ #each steps }}
-            <div class="step">
-                <details>
-                    <summary>
-                        <div class="marker {{ #if success }}green{{ else }}red{{ /if }}">●</div>
-                        <div class="title">{{ config.name }}</div>
-                    </summary>
-                    <div class="detailsContent">
-                        <p>command</p>
-                        <pre>{{ config.run }}</pre>
-                        <p>stdout</p>
-                        <pre>{{ stdout }}</pre>
-                        <p>stderr</p>
-                        <pre>{{ stderr }}</pre>
-                    </div>
-                </details>
-            </div>
-            {{ /each }}
+  {{#if pending_workflow_run }}
+  <details class="projectWidget" open>
+    <summary>
+      Pending deployment
+    </summary>
+    <div>
+      <div class="deployment">
+        <div class="header">
+          <div class="circle orange"></div>
+          <div class="title">
+            {{ pending_workflow_run.display_title }}
+          </div>
         </div>
-    </details>
+        <div class="body">
+          <p>
+            <a href="{{ pending_workflow_run.html_url }}">Build #{{ pending_workflow_run.run_number }}.</a>
+            Deploying TODO.
+          </p>
+        </div>
+      </div>
+    </div>
+  </details>
+  {{ else }}
+  <p>
+    No pending deployment.
+  </p>
+  {{/if}}
+
+  <details class="projectWidget">
+    <summary>
+      Most recent deployments
+    </summary>
+    <div>
+      {{ #each run_results }}
+      <div class="deployment">
+        <div class="header">
+          <div class="circle {{ #if success }}green{{ else }}red{{ /if }}"></div>
+          <div class="title">
+            {{ workflow_run.display_title }}
+          </div>
+        </div>
+        <div class="body">
+          <p>
+            <a href="{{ workflow_run.html_url }}">Build #{{ workflow_run.run_number }}.</a>
+            {{ #if success }}Deployed{{ else }}Failed{{ /if }}
+            {{ time_diff finished }}.
+          </p>
+          <details>
+            <summary>Deployment logs</summary>
+            <div class="logs">
+
+              {{ #each steps }}
+              <div>{{ config.name }}</div>
+              <pre>
+<b>$ {{ config.run }}</b>
+{{ stderr }}
+{{ #if success }}<b class="greenText">Success</b>{{ else }}<b class="redText">Failure</b>{{ /if }}
+              </pre>
+              {{ /each }}
+
+            </div>
+          </details>
+        </div>
+      </div>
+      {{ /each }}
+    </div>
+  </details>
+
+
+
+<details class="projectWidget">
+  <summary>Project configuration</summary>
+  <div class="deployment">
+    <pre style="border: 0; background-color: white;">
+- name: Texcraft
+  github_user: jamespfennell
+  repo: texcraft
+  mainline_branch: main
+  working_directory: /home/james/301X-texcraft.dev
+  wait_minutes: 100000000
+  steps:
+  - name: Pull
+    run: docker-compose pull
+  - name: Redeploy
+    run: docker-compose up -d
+  - name: Wait for 5 seconds
+    run: sleep 5
+  - name: Ping texcraft.dev
+    run: curl --fail-with-body -v https://texcraft.dev --output /dev/null
+  - name: Ping play.texcraft.dev
+    run: curl --fail-with-body -v https://play.texcraft.dev --output /dev/null
+    </pre>
+  </div>
+</details>
+
 </div>
 
-{{ /each }}
-</div>
 
 {{ /each }}
-</div>
 
 
 <h2>GitHub client</h2>
