Actually architect the code
This program evolved from a thrown together Rust program.
This huge commit adds a clear architecture to it. I also
take advantage of making a huge change to improve the config
and on disk file formats.

--- a/src/status.html
+++ b/src/status.html
@@ -241,13 +241,6 @@ h1, h2, h3, h4 {
 
 <h2>GitHub client</h2>
 
-<h3>URLs</h3>
-
-<ul>
-  {{ #each github_client.cache as |data key| }}
-  <li>{{ key }}</li>
-  {{ /each }}
-</ul>
 <h3>Rate limiting data</h3>
 
 <table>
@@ -256,7 +249,7 @@ h1, h2, h3, h4 {
     <th>used/limit</th>
     <th>reset time</th>
   </tr>
-  {{ #each github_client.rate_limit_resource_to_infos as |info key| }}
+  {{ #each rate_limit_info.resource_to_info as |info key| }}
   <tr>
     <td>{{ info.resource }}</td>
     <td>{{ info.used }}/{{ info.limit }}</td>
