config: replace user and repo fields with one repo
Also fix a bug in shutdown. Before this commit, if one of the
async threads paniced the main thread would hang. The solution
is to not join explictly one at a time, but let the scope thread
thing do the joining. This means that all shutdown signals run
before joining on threads, and we don't get stuck joining.

--- a/src/status.html
+++ b/src/status.html
@@ -130,8 +130,8 @@ h1, h2, h3, h4 {
 <div class="project">
   <h3>{{config.name}}</h3>
   <p>
-    <a href="https://github.com/{{ config.github_user }}/{{ config.repo}}">
-      github.com/{{ config.github_user }}/{{ config.repo}}
+    <a href="https://{{ config.repo }}">
+      {{ config.repo }}
     </a>
   </p>
   <p>
