--- a/src/status.html
+++ b/src/status.html
@@ -15,16 +15,24 @@
 h1, h2, h3, h4 {
     font-weight: 700;
 }
-
+a {
+  color: royalblue;
+  text-underline-position: under;
+}
 .greenText {
     color: seagreen;
 }
 
 .green {
     color: seagreen;
-  background: seagreen;
+    background: seagreen;
 }
-
+.greenBorder {
+  border-left: 5px solid seagreen;
+}
+.redBorder {
+  border-left: 5px solid indianred;
+}
 .redText {
     color: indianred;
 }
@@ -37,7 +45,6 @@ h1, h2, h3, h4 {
 }
 
 .project {
-  border-left: 5px solid lightskyblue;
   padding-left: 10px;
 }
 .project > p {
@@ -83,6 +90,9 @@ h1, h2, h3, h4 {
   margin-left: 30px;
   font-size: 0.9em;
 }
+.deployment > .body a {
+  color: #444;
+}
 .deployment > .body p {
   padding: 0;
   margin: 5px 0px;
@@ -115,19 +125,26 @@ h1, h2, h3, h4 {
 </head>
 <body>
 <div class="container">
-<h1>Continuous deployment agent</h1>
+<h1>Rollouts agent</h1>
+
+<p>
+  <a href="https://github.com/jamespfennell/rollouts">github.com/jamespfennell/rollouts</a>
+</p>
 
 <h2>Projects</h2>
 
+<!--
+Table of contents, if we ever want it back.
 <ul>
 {{ #each projects }}
     <li><a href="#projects-{{config.name}}">{{ config.name }}</a></li>
 {{ /each }}
 </ul>
+-->
 
 {{ #each projects }}
 <a name="projects-{{config.name}}"></a>
-<div class="project">
+<div class="project {{#if run_results.[0]}}{{#with run_results.[0]}}{{ #if success }}greenBorder{{ else }}redBorder{{ /if }}{{/with}}{{/if }}">
   <h3>{{config.name}}</h3>
   <p>
     <a href="https://{{ config.repo }}">
@@ -135,7 +152,14 @@ h1, h2, h3, h4 {
     </a>
   </p>
   <p>
-    Last deployed X hours ago. 
+    {{#if run_results.[0]}}
+      {{#with run_results.[0]}}
+        Last {{ #if success }}deployed{{ else }}failed{{ /if }}
+        {{ time_diff finished }}.
+      {{/with}}
+    {{ else }}
+    Never deployed.
+    {{/if}}
   </p>
 
   {{#if pending_workflow_run }}
@@ -211,25 +235,7 @@ h1, h2, h3, h4 {
 <details class="projectWidget">
   <summary>Project configuration</summary>
   <div class="deployment">
-    <pre style="border: 0; background-color: white;">
-- name: Texcraft
-  github_user: jamespfennell
-  repo: texcraft
-  mainline_branch: main
-  working_directory: /home/james/301X-texcraft.dev
-  wait_minutes: 100000000
-  steps:
-  - name: Pull
-    run: docker-compose pull
-  - name: Redeploy
-    run: docker-compose up -d
-  - name: Wait for 5 seconds
-    run: sleep 5
-  - name: Ping texcraft.dev
-    run: curl --fail-with-body -v https://texcraft.dev --output /dev/null
-  - name: Ping play.texcraft.dev
-    run: curl --fail-with-body -v https://play.texcraft.dev --output /dev/null
-    </pre>
+    <pre style="border: 0; background-color: white;">{{ json_pretty config }}</pre>
   </div>
 </details>
 
