Send an email when rollouts fail

--- a/src/status.html
+++ b/src/status.html
@@ -125,6 +125,9 @@ a {
 <h1>Rollouts agent</h1>
 
 <p>
+  {{ hostname }}
+</p>
+<p>
   <a href="https://github.com/jamespfennell/rollouts">github.com/jamespfennell/rollouts</a>
 </p>
 
